Added the Windows Forms Project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /UserApplicationLogging/UserApplication/bin
 /UserApplicationLogging/UserModel/bin
 /UserApplicationLogging/AppLogging/bin
+/WindowsFormsProject/WindowsFormsProject/bin
